--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,69 @@
 @import 'nullstyle.scss';
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+body {
+   height: 100%;
+   line-height: 1;
+   font-size: 14px;
+   background: rgb(2, 0, 36);
+   background: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(63, 200, 196, 1) 87%,
+      rgba(0, 212, 255, 1) 100%
+   );
+   color: white;
+   font-family: 'Playfair Display', serif;
+}
+.wrapper {
+}
+.form {
+   &__body {
+   }
+
+   &__title {
+   }
+
+   &__item {
+   }
+
+   &__label {
+   }
+
+   &__input {
+   }
+
+   &__button {
+   }
+}
+.options {
+   &__item {
+   }
+
+   &__input {
+   }
+
+   &__label {
+   }
+}
+.select {
+}
+.file {
+   &__item {
+   }
+
+   &__input {
+   }
+
+   &__button {
+   }
+
+   &__preview {
+   }
+}
+.checkbox {
+   &__input {
+   }
+
+   &__label {
+   }
+}
