--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,110 @@ h6 {
 body {
   height: 100%;
   line-height: 1;
-  font-size: 14px;
+  font-size: 18px;
   background: #020024;
   background: -webkit-gradient(linear, left top, right top, from(#020024), color-stop(87%, #3fc8c4), to(#00d4ff));
   background: linear-gradient(90deg, #020024 0%, #3fc8c4 87%, #00d4ff 100%);
   color: white;
   font-family: 'Playfair Display', serif;
+}
+
+.form {
+  max-width: 550px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+.form__title {
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0 0 30px;
+}
+
+.form__item {
+  margin-bottom: 20px;
+}
+
+.form__label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__input {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  padding: 0 20px;
+}
+
+.form textarea.form__input {
+  padding: 20px;
+  min-height: 120px;
+  resize: vertical;
+}
+
+.form__button {
+  background: #843fc8;
+  background: -webkit-gradient(linear, left top, right top, from(#843fc8), color-stop(100%, #2f8495), to(#020024));
+  background: linear-gradient(90deg, #843fc8 0%, #2f8495 100%, #020024 100%);
+}
+
+.options {
+  padding-top: 10px;
+}
+
+.options__item {
+  margin-bottom: 5px;
+}
+
+.options__input {
+  display: none;
+}
+
+.options__input:checked + .options__label::after {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.options__label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 16px;
+  line-height: 1.4;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.options__label::before {
+  content: '';
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 24px;
+          flex: 0 0 24px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  height: 24px;
+  background-color: white;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.options__label::after {
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 16px;
+  height: 16px;
+  background: black;
+  background: radial-gradient(circle, black 0%, #00e8ed 51%, #125758 100%);
+  border-radius: 50%;
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
