--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 body {
    height: 100%;
    line-height: 1;
-   font-size: 14px;
+   font-size: 18px;
    background: rgb(2, 0, 36);
    background: linear-gradient(
       90deg,
@@ -14,35 +14,99 @@ body {
    color: white;
    font-family: 'Playfair Display', serif;
 }
-.wrapper {
-}
 .form {
+   max-width: 550px;
+   margin: 0 auto;
+   padding: 30px 0;
    &__body {
    }
 
    &__title {
+      font-size: 40px;
+      font-weight: 700;
+      margin: 0 0 30px;
    }
 
    &__item {
+      margin-bottom: 20px;
    }
 
    &__label {
+      display: block;
+      margin-bottom: 10px;
    }
 
    &__input {
+      width: 100%;
+      height: 50px;
+      border-radius: 10px;
+      padding: 0 20px;
+   }
+
+   textarea.form__input {
+      padding: 20px;
+      min-height: 120px;
+      resize: vertical;
    }
 
    &__button {
+      background: rgb(132, 63, 200);
+      background: linear-gradient(
+         90deg,
+         rgba(132, 63, 200, 1) 0%,
+         rgba(47, 132, 149, 1) 100%,
+         rgba(2, 0, 36, 1) 100%
+      );
    }
 }
 .options {
+   padding-top: 10px;
+
    &__item {
+      margin-bottom: 5px;
    }
 
    &__input {
+      display: none;
+   }
+
+   &__input:checked + .options__label::after {
+      transform: scale(1);
    }
 
    &__label {
+      display: inline-flex;
+      font-size: 16px;
+      line-height: 1.4;
+      align-items: center;
+      position: relative;
+   }
+   &__label::before {
+      content: '';
+      flex: 0 0 24px;
+      align-self: flex-start;
+      height: 24px;
+      background-color: white;
+      border-radius: 50%;
+      margin-right: 10px;
+   }
+   &__label::after {
+      transition: transform 0.2s ease;
+      content: '';
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      width: 16px;
+      height: 16px;
+      background: rgb(0, 0, 0);
+      background: radial-gradient(
+         circle,
+         rgba(0, 0, 0, 1) 0%,
+         rgba(0, 232, 237, 1) 51%,
+         rgba(18, 87, 88, 1) 100%
+      );
+      border-radius: 50%;
+      transform: scale(0);
    }
 }
 .select {
