--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,16 @@ body {
   padding: 0 20px;
 }
 
+.form__input:focus {
+  -webkit-box-shadow: 0 0 15px #fffb00;
+          box-shadow: 0 0 15px #fffb00;
+}
+
+.form__input._error {
+  -webkit-box-shadow: 0 0 15px #ff0606;
+          box-shadow: 0 0 15px #ff0606;
+}
+
 .form textarea.form__input {
   padding: 20px;
   min-height: 120px;
@@ -133,9 +143,43 @@ body {
 }
 
 .form__button {
+  position: relative;
+  width: 100%;
+  min-height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-style: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: white;
+  letter-spacing: 2px;
+  border-radius: 20px;
+  border: 1.5px solid black;
+  -webkit-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
+  cursor: pointer;
+  -webkit-box-shadow: 0 5px 0 #1c0d2b;
+          box-shadow: 0 5px 0 #1c0d2b;
   background: #843fc8;
   background: -webkit-gradient(linear, left top, right top, from(#843fc8), color-stop(100%, #2f8495), to(#020024));
   background: linear-gradient(90deg, #843fc8 0%, #2f8495 100%, #020024 100%);
+}
+
+.form__button:hover {
+  background: #8809f8;
+}
+
+.form__button:active {
+  top: 3px;
+  -webkit-box-shadow: 0 1px 0 #1c0d2b;
+          box-shadow: 0 1px 0 #1c0d2b;
 }
 
 .options {
@@ -213,7 +257,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 20%;
+  width: 23%;
   height: 100%;
   opacity: 0;
   font-size: 0;
@@ -246,4 +290,60 @@ body {
 
 .file__preview img {
   max-width: 100%;
+}
+
+.checkbox._error .checkbox__label::before {
+  -webkit-box-shadow: 0 0 15px red;
+          box-shadow: 0 0 15px red;
+}
+
+.checkbox__input {
+  cursor: pointer;
+  display: none;
+}
+
+.checkbox__label {
+  position: relative;
+  line-height: 1.4;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.checkbox__label a {
+  color: yellow;
+}
+
+.checkbox__label::before {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 24px;
+          flex: 0 0 24px;
+  height: 24px;
+  background-color: white;
+  border-radius: 4px;
+  content: '';
+  margin-right: 10px;
+}
+
+.checkbox__label::after {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 4px;
+  left: 4px;
+  background: black;
+  background: radial-gradient(circle, black 0%, #00e8ed 51%, #125758 100%);
+  border-radius: 4px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
+}
+
+.checkbox__input:checked + .checkbox__label::after {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
