--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import '/nullstyle.scss';
+@import 'nullstyle.scss';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 body {
   height: 100%;
@@ -18,8 +18,6 @@ body {
   max-width: 550px;
   margin: 0 auto;
   padding: 30px 0;
-  &__body {
-  }
 
   &__title {
     font-size: 40px;
@@ -232,5 +230,15 @@ body {
   }
   &__input:checked + .checkbox__label::after {
     transform: scale(1);
+  }
+}
+
+@media (max-width: 757px) {
+  .form {
+    margin: 0 auto;
+    padding: 30px 20px 30px;
+    &__title {
+      font-size: 30px;
+    }
   }
 }
